...
                is Result.Success -> {
                    _uiState.update { 
                        it.copy(
                            isRemovingColaborador = false,
                            showEditColaboradorDialog = false,
                            selectedColaborador = null,
                            userMessage = "Colaborador removido com sucesso!"
                        ) 
                    }
                    loadColaboradores()
                }
                is Result.Error -> {
                    val message = result.exception.message ?: "Ocorreu um erro inesperado."
...
